--- a/styles/style.css
+++ b/styles/style.css
@@ -48,7 +48,7 @@ header > h1{
     text-shadow: 3px 3px 1px rgba(0, 0, 0, 0.613);
 }
 
-header > p{
+header p{
     font-family: var(--fonte-padrao);
     font-size: 1.2em;
     color: white;
@@ -56,16 +56,18 @@ header > p{
     margin-left: 10px;
     margin-right: 10px;
     margin: auto;
+    padding-bottom: 25px;
     text-shadow: 3px 3px 1px rgba(0, 0, 0, 0.736);
 }
 
 nav{
     background-color: var(--cor5);
+    padding: 10px;
     box-shadow: 1px 7px 7px rgba(0, 0, 0, 0.333);
 }
 
 nav > a{
-    color: white;
+    color: var(--cor1);
     padding: 10px;
     border-radius: 5px;
     text-decoration: none;
@@ -100,8 +102,82 @@ main img.pequena{
     margin: auto;
 }
 
-main h1, h2{
+div.video{
+    background-color: var(--cor3);
+    margin: 0px -20px 35px -20px;
+    padding: 20px;
+    padding-bottom: 58.5%;
+    position: relative;
+}
+
+div.video > iframe{
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
+}
+
+main h1{
     font-family: var(--fonte-android);
+    font-size: 1.9em;
+    font-weight: 500;
+}
+
+main h2{
+    font-family: var(--fonte-android);
+    color: var(--cor4);
+    font-size: 1.7em;
+    font-weight: 800;
+    background-image: linear-gradient(to right, var(--cor2), transparent);
+    text-indent: 12px;
+}
+
+main p{
+    margin: 15px 0px;
+    text-align: justify;
+    line-height: 1.9em;
+    font-size: 1.08em;
+    text-indent: 30px;
+}
+
+main strong{
+    color: var(--cor4);
+    font-weight: bold;
+}
+
+main a{
+    background-color: var(--cor1);
+    color: var(--cor5);
+    padding: 2px 5px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-weight: 900;
+}
+
+main a:hover{
+    text-decoration: underline;
+    color: var(--cor4);
+}
+
+aside{
+    background-color: var(--cor1);
+    padding: 12px;
+    border-radius: 11px;
+    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.202);
+}
+
+aside > ul{
+    list-style-position: inside;
+    columns: 2;
+}
+
+aside > h3{
+    background-color: var(--cor4);
+    color: white;
+    padding: 10px;
+    margin: -10px -10px 0px -10px;
+    border-radius: 11px 11px 0px 0px;
 }
 
 footer{
@@ -112,5 +188,7 @@ footer{
     margin: auto;
     margin-bottom: 15px;
     border-radius: 5px;
-    padding: 3px;
+    padding: 5px;
+    font-size: 0.8em;
+    opacity: 0.9;
 }
